# NexusLauncher

./: Cargo.toml  README.md
src/: cli.rs  config.rs  java.rs  launch.rs  main.rs
src/auth/: storage.rs  utils.rs
src/config/: mod.rs  models.rs  nexus_config.rs
src/launch/: launcher.rs  mod.rs  models.rs
src/loader/: fabric.rs  mod.rs  models.rs
src/version/: download.rs  mod.rs  models.rs  source.rs  utils.rs
