[package]
name = "NexusLauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.0"
futures-util = "0.3.32"
hex = "0.4.3"
home = "0.5.12"
indicatif = "0.18.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha-1 = "0.10.1"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
