[package]
name = "NexusLauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
futures-util = "0.3.32"
hex = "0.4.3"
home = "0.5.12"
indicatif = "0.18.4"
machine-uid = "0.5.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha-1 = "0.10.1"
sha2 = "0.11.0"
tar = "0.4.45"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
zip = "8.5.0"
